=========================
2004-02-23 23:24:31 v0_62
=========================

  2004-02-23 23:24:31 by rcaputo; HTTP.pm 1.51; Makefile.PL 1.20

    Matt Cashner pointed out that HTTP.pm uses a feature from a recent
    version of POE. Makefile.PL specified the correct version for
    ExtUtils::AutoInstall, but it had the old version for
    ExtUtils::MakeMaker. This commit bumps the version to 0.62 for
    release, and it uses the same set of mandatory dependencies for both
    installer libraries. 

  2004-02-13 02:16:09 by rcaputo; HTTP.pm 1.50

    A comment and another internal test are added. 

=========================
2004-01-15 21:04:51 v0_61
=========================

  2004-01-15 21:04:51 by rcaputo; HTTP.pm 1.49

    Apply Graham Barr's patch to accept HTTP status codes without
    messages. Uses HTTP::Status to generate a default message in this
    case. 

=========================
2004-01-14 19:21:53 v0_60
=========================

  2004-01-14 19:21:53 by rcaputo; HTTP.pm 1.48

    Bump the release version to 0.60. 

  2004-01-14 19:21:27 by rcaputo; HTTP.pm 1.47

    Graham Barr discovered a problem where shutdown_output() was causing
    IIS servers to disconnect before sending responses. He suspects it's
    a race condition that only shows up over connections with
    Internet-scale latency. It didn't appear in localhost testing.
    Nevertheless, this isn't the first time where shutdown_output()
    caused problems, so I've left the call in a comment and clearly
    marked why it's that way. 

  2003-11-29 06:17:18 by rcaputo; HTTP.pm 1.46

    Apply Richard Harmon's patch, rt.cpan.org ticket 4521, to support
    "ICY" http status lines. These apparently are Shoutcast mp3 streams. 

=========================
2003-11-22 06:02:39 v0_59
=========================

  2003-11-22 06:02:39 by rcaputo; HTTP.pm 1.45; t/01_request.t 1.16

    Jeff (last name lost) discovered that redirects weren't properly