@@ -1,4 +1,4 @@
-# $Id: MANIFEST,v 1.6 2002/07/10 15:24:18 rcaputo Exp $
+# $Id: MANIFEST,v 1.7 2004/02/27 18:59:36 rcaputo Exp $
 CHANGES
 CHANGES.OLD
 mylib/ExtUtils/AutoInstall.pm
