@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-Component-Client-HTTP
-version:      0.62
+version:      0.63
 version_from: HTTP.pm
 installdirs:  site
 requires:
